# kaibo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/: release-body.md
.github/workflows/: ci.yml  release.yml
docs/: casts.md  config.example.toml  config.md  desc-and-schema-tuning.md  devlog.md  gemini-cli-findings.md  issues.md  kaibo-agent-models-quick-test.md  kaibo-persistence-and-cli.md  oai-images.md  releases.md  sandbox-probes.md
docs/brand/: generate.py
src/: attach.rs  batch.rs  cli.rs  config.rs  consult.rs  context.rs  credentials.rs  explorer.rs  generate_image.rs  image_gen.rs  jobs.rs  kaish_syntax.rs  lib.rs  main.rs  mcp_log.rs  orientation.rs  progress.rs  sandbox.rs  server.rs  session.rs  store.rs  telemetry.rs  test_support.rs  tls.rs  tool_span.rs  view_image.rs  worktree.rs
src/consult/: config.rs  engine.rs  mod.rs  prompts.rs  shaping.rs
src/server/: config_resource.rs  containment.rs  mod.rs  render.rs  resolver.rs
tests/: attach.rs  cast_param.rs  config.rs  consult.rs  containment.rs  credentials.rs  explore_send.rs  explorer_live.rs  gating.rs  guards.rs  image_gen_live.rs  llm_timeout.rs  no_write_path.rs  rig_wire.rs  run_kaish_tool.rs  sandbox.rs  store.rs  telemetry_live.rs  telemetry_tls.rs  tls.rs  worker.rs
