[package]
name = "kaibo"
description = "解剖 — a two-phase MCP consult agent that explores a read-only filesystem through kaish builtins"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[lib]
name = "kaibo"
path = "src/lib.rs"

[[bin]]
name = "kaibo"
path = "src/main.rs"

[dependencies]
# kaish-kernel embedded as a library: read-only VFS + builtin toolbox for the explorer.
# We opt into ONLY the `localfs` axis (real-file I/O through the backend). That
# leaves `subprocess` (exec/spawn/kill), `git`, `host` (ps/uname), and
# `os-integration` (trash) OFF — so those builtins are never compiled in. kaibo's
# read-only safety is thus structural (the dangerous surface doesn't exist),
# backed by the runtime read-only mount; see src/sandbox.rs.
kaish-kernel = { version = "0.8.1", default-features = false, features = ["localfs"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
anyhow = "1"

# LLM providers + agent/tool loop. Native tools (no `rmcp` feature needed — kaibo
# wraps kaish as an in-process rig Tool, not over MCP).
rig-core = "0.38"
# We construct the HTTP backend ourselves (a `reqwest::Client` carrying a
# per-request timeout) and hand it to rig via `.http_client(..)` — rig has no
# native timeout knob, and its prompt loop is non-streaming, so a wedged provider
# would otherwise hang a tool call forever (see consult.rs / docs/issues.md).
# Match rig's own reqwest: version 0.13, rustls TLS, no default-tls — feature
# unification then keeps a single reqwest with one TLS backend.
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Base64 for `view_image`: the rig tool-result image envelope carries bytes as a
# base64 string (the only channel that lands image parts in model context). Already
# in the tree transitively via rig-core; named here so the dep is ours, not implicit.
base64 = "0.22"
# XDG config.toml: named provider profiles + tunables. `deny_unknown_fields` on the
# raw structs turns a typo'd key into a startup error rather than a silent no-op.
toml = "0.8"

# MCP server (stdio only — never bind a socket; the FS is the boundary).
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.18"

# OpenTelemetry traces (opt-in, off by default — see src/telemetry.rs + config.rs).
# rig-core already emits the GenAI span tree (invoke_agent → chat → tool, with
# gen_ai.usage.* token fields); these crates just export it over OTLP. We pick the
# HTTP/protobuf transport on an *async* reqwest client so it reuses kaibo's existing
# reqwest 0.13 + rustls (no tonic/gRPC, no second HTTP stack) — feature unification
# then keeps a single reqwest. The outbound OTLP socket is allowed under stdio-only
# (kaibo never *binds*); it stays off unless [telemetry] enables it.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-client", "reqwest-rustls"] }
tracing-opentelemetry = "0.33"

[dev-dependencies]
tempfile = "3"
