[package]
name = "kaibo"
description = "解剖 — a two-phase MCP consult agent that explores a read-only filesystem through kaish builtins"
version = "0.2.0-rc.5"
edition = "2021"
rust-version = "1.85"
license = "MIT"

[lib]
name = "kaibo"
path = "src/lib.rs"

[[bin]]
name = "kaibo"
path = "src/main.rs"

[dependencies]
# kaish-kernel embedded as a library: read-only VFS + builtin toolbox for the explorer.
# We opt into ONLY the `localfs` axis (real-file I/O through the backend). That
# leaves `subprocess` (exec/spawn/kill), `git`, `host` (ps/uname), and
# `os-integration` (trash) OFF — so those builtins are never compiled in. kaibo's
# read-only safety is thus structural (the dangerous surface doesn't exist),
# backed by the runtime read-only mount; see src/sandbox.rs.
kaish-kernel = { version = "0.12.0", default-features = false, features = ["localfs"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
anyhow = "1"

# LLM providers + agent/tool loop. Native tools (no `rmcp` feature needed — kaibo
# wraps kaish as an in-process rig Tool, not over MCP).
# `default-features = false` drops rig's default `rustls` feature, which would
# pull `reqwest/rustls` → the aws-lc-rs crypto provider (C + cmake, the one thing
# that makes a static musl build painful). We re-add the other defaults rig needs
# (`reqwest`, `derive`) and let TLS come from our own `rustls`+ring wiring below.
rig-core = { version = "0.38", default-features = false, features = ["reqwest", "derive"] }
# We construct the HTTP backend ourselves (a `reqwest::Client` carrying a
# per-request timeout) and hand it to rig via `.http_client(..)` — rig has no
# native timeout knob, and its prompt loop is non-streaming, so a wedged provider
# would otherwise hang a tool call forever (see consult.rs / docs/issues.md).
# Match rig's own reqwest: version 0.13, rustls TLS, no default-tls.
#
# `rustls-no-provider` (not `rustls`): reqwest's plain `rustls` feature hard-wires
# the aws-lc-rs crypto provider (C/cmake — the static-musl footgun). `-no-provider`
# compiles rustls but bakes no default provider, so reqwest reads the *process*
# default `CryptoProvider` at client-build time and panics loudly if none is
# installed (never a silent no-TLS fallback). We install ring once at startup —
# see `src/tls.rs`. This keeps the whole tree aws-lc-free for static builds; verify
# with `cargo tree -i aws-lc-rs` (must be empty).
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider"] }
# The crypto provider behind rustls, chosen explicitly: ring, not aws-lc-rs. ring
# builds with no C toolchain or cmake, so `x86_64-unknown-linux-musl` (and friends)
# link fully static out of the box. reqwest pins rustls `default-features = false`,
# so naming ring here is what actually compiles a provider in; `src/tls.rs` installs
# it as the process default. Keep the version aligned with reqwest's rustls (0.23).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Base64 for `view_image`: the rig tool-result image envelope carries bytes as a
# base64 string (the only channel that lands image parts in model context). Already
# in the tree transitively via rig-core; named here so the dep is ours, not implicit.
base64 = "0.22"
# XDG config.toml: named provider profiles + tunables. `deny_unknown_fields` on the
# raw structs turns a typo'd key into a startup error rather than a silent no-op.
toml = "0.8"
# Neutralizing `<file>`-tag lookalikes in an attachment body (attach.rs) — a literal
# scan can't catch the whitespace/case variants a model would still read as a
# delimiter. Pure Rust, no C, so it's clear of the aws-lc/OpenSSL ban; already in the
# tree transitively via kaish-kernel, named here so the dep is ours, not implicit.
regex = "1"

# MCP server (stdio only — never bind a socket; the FS is the boundary).
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.18"
# Persistent session + batch-handle store (src/store.rs). turso is the pure-Rust
# SQLite rewrite (ex-Limbo); the embedded `turso` crate, NOT libSQL or the cloud SDK.
# EXACT-pinned (`=0.7.0`): the `.db-tshm` on-disk WAL format AND the API are declared
# unstable between releases (same discipline as the kaish-kernel pin) — a bump must be
# a deliberate, tested port, never a silent `^` float. `default-features = false` is
# MANDATORY: the defaults install `mimalloc` as the whole binary's global allocator via
# a C build (a hijack we will not accept implicitly) and pull `fts`. The `sync` feature
# must NEVER be enabled — it materializes a network/HTTP stack, which would breach the
# stdio-only + no-aws-lc invariants; the default `turso_sync_engine` weight carries no
# transport without it. Verified aws-lc-rs/aws-lc-sys/openssl-sys/cmake-free via
# `cargo tree -i` (see the store module doc-comment for the audit).
turso = { version = "=0.7.0", default-features = false }
# A typed store error wrapping `turso::Error` variants meaningfully (src/store.rs). The
# rest of kaibo leans on anyhow, but a persistence library boundary wants a real error
# enum callers can match on; thiserror is already in the tree (via kaish-kernel), so this
# names an existing dep rather than adding build cost.
thiserror = "2"
# RFC3339 parsing for the `list` recency filter only — already in the tree (kaish-kernel
# / rmcp / schemars). Parsing needs just `alloc`; "now" comes from `SystemTime`, so the
# `clock` feature (and its iana-time-zone dep) stays off.
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

# OpenTelemetry traces (opt-in, off by default — see src/telemetry.rs + config.rs).
# rig-core already emits the GenAI span tree (invoke_agent → chat → tool, with
# gen_ai.usage.* token fields); these crates just export it over OTLP. We pick the
# HTTP/protobuf transport reusing kaibo's reqwest 0.13 + rustls (no tonic/gRPC, no
# second HTTP stack) — feature unification keeps a single reqwest. We use the
# *blocking* reqwest client deliberately: the default `with_batch_exporter` runs on a
# dedicated thread and drives export via `futures_executor::block_on` with no tokio
# reactor, so an *async* reqwest client fails every export ("no reactor running") and
# silently drops spans. The blocking client owns its own thread+runtime and works
# there. The outbound OTLP socket is allowed under stdio-only (kaibo never *binds*);
# it stays off unless [telemetry] enables it.
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
# No `reqwest-rustls` here: that feature pulls `reqwest/default-tls` → `reqwest/rustls`
# → aws-lc-rs, re-introducing the C provider we just dropped. The blocking exporter
# builds a plain reqwest client and uses whatever TLS the (feature-unified) reqwest
# was compiled with — i.e. our rustls-no-provider + ring. So we keep only the
# transport features and let TLS come from the shared reqwest above.
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client"] }
tracing-opentelemetry = "0.33"

# Local-filesystem validation for the persistence store (src/store.rs): turso's
# multiprocess-WAL mode is unsupported on network filesystems (NFS/CIFS), where a
# shared open can silently lose writes. On Linux we `statfs` the state dir and refuse a
# known network fs magic. libc is already in the tree transitively (getrandom); named
# here only under a Linux target so no new build cost lands on any platform, and no
# heavy dependency is added for this check.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
